Spark DataFrame Groupby and Aggregate Operations

--- a/my_spark.ipynb
+++ b/my_spark.ipynb
@@ -6,12 +6,19 @@
       "name": "my-spark.ipynb",
       "provenance": [],
       "collapsed_sections": [
+        "8Z54jYXUY1k8",
         "B6Ft81DKY_qU",
         "iBD_niDDhN74",
         "qdkfiPtkh2CO",
-        "_21vcmyyi0Du"
+        "_21vcmyyi0Du",
+        "oIuyZLfHkEIH",
+        "crasDF9jkPRX",
+        "nVdeVOSixvQp",
+        "1AVREeDOx3uE",
+        "va1anfQZx86t",
+        "Bag5vr_qyEzn"
       ],
-      "authorship_tag": "ABX9TyOXip9q+jEZCcF0btTMJteB",
+      "authorship_tag": "ABX9TyPIwV91mwvHy3JvZZ6YoAze",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1605,20 +1612,9 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "uP0pwJX0n6cF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "# **Groupby and Aggregate Operations**"
+        "# **Spark DataFrame Groupby and Aggregate Operations**"
       ],
       "metadata": {
         "id": "crasDF9jkPRX"
@@ -1627,35 +1623,645 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "from pyspark.sql import SparkSession"
       ],
       "metadata": {
         "id": "887HKDXfkXfe"
       },
-      "execution_count": null,
+      "execution_count": 108,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "spark = SparkSession.builder.appName('aggs').getOrCreate()"
+      ],
+      "metadata": {
+        "id": "l4UGFfWCvUfS"
+      },
+      "execution_count": 109,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = spark.read.csv('sales_info.csv',inferSchema=True, header=True)"
       ],
       "metadata": {
         "id": "Ywd0h3MdkXvn"
       },
-      "execution_count": null,
+      "execution_count": 110,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "df.show()"
       ],
       "metadata": {
-        "id": "VlYtrnHakX03"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VlYtrnHakX03",
+        "outputId": "dad3cebb-462a-46dd-bf08-1d3cda78ca57"
       },
-      "execution_count": null,
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+-------+-----+\n",
+            "|Company| Person|Sales|\n",
+            "+-------+-------+-----+\n",
+            "|   GOOG|    Sam|200.0|\n",
+            "|   GOOG|Charlie|120.0|\n",
+            "|   GOOG|  Frank|340.0|\n",
+            "|   MSFT|   Tina|600.0|\n",
+            "|   MSFT|    Amy|124.0|\n",
+            "|   MSFT|Vanessa|243.0|\n",
+            "|     FB|   Carl|870.0|\n",
+            "|     FB|  Sarah|350.0|\n",
+            "|   APPL|   John|250.0|\n",
+            "|   APPL|  Linda|130.0|\n",
+            "|   APPL|   Mike|750.0|\n",
+            "|   APPL|  Chris|350.0|\n",
+            "+-------+-------+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.printSchema()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6ZWxnCmGvvkK",
+        "outputId": "b8deebcb-f839-4f18-940f-d2162b9c0544"
+      },
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- Company: string (nullable = true)\n",
+            " |-- Person: string (nullable = true)\n",
+            " |-- Sales: double (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# groupby"
+      ],
+      "metadata": {
+        "id": "nVdeVOSixvQp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.groupBy(\"Company\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EVqQibVSv1F1",
+        "outputId": "6ee28aec-13e9-4728-a04a-0a65b1d4299e"
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<pyspark.sql.group.GroupedData at 0x7f50e1875850>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.groupBy(\"Company\").mean().show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "laaY9LNpv8k0",
+        "outputId": "d6fe4e5f-ecbb-44c3-fffe-8001ffdd7388"
+      },
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+-----------------+\n",
+            "|Company|       avg(Sales)|\n",
+            "+-------+-----------------+\n",
+            "|   APPL|            370.0|\n",
+            "|   GOOG|            220.0|\n",
+            "|     FB|            610.0|\n",
+            "|   MSFT|322.3333333333333|\n",
+            "+-------+-----------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.groupBy(\"Company\").sum().show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ix_fDm8UwHcp",
+        "outputId": "516a4c88-0792-4c83-9b1b-521900a95dfe"
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+----------+\n",
+            "|Company|sum(Sales)|\n",
+            "+-------+----------+\n",
+            "|   APPL|    1480.0|\n",
+            "|   GOOG|     660.0|\n",
+            "|     FB|    1220.0|\n",
+            "|   MSFT|     967.0|\n",
+            "+-------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.groupBy(\"Company\").min().show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hxLgYzBTwIlv",
+        "outputId": "eec7e188-db0c-40fa-a341-a5a4043624d3"
+      },
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+----------+\n",
+            "|Company|min(Sales)|\n",
+            "+-------+----------+\n",
+            "|   APPL|     130.0|\n",
+            "|   GOOG|     120.0|\n",
+            "|     FB|     350.0|\n",
+            "|   MSFT|     124.0|\n",
+            "+-------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.groupBy(\"Company\").count().show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B3StgUL3wJza",
+        "outputId": "118b4786-656f-4697-f920-d661e3be0f3b"
+      },
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+-----+\n",
+            "|Company|count|\n",
+            "+-------+-----+\n",
+            "|   APPL|    4|\n",
+            "|   GOOG|    3|\n",
+            "|     FB|    2|\n",
+            "|   MSFT|    3|\n",
+            "+-------+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# agg"
+      ],
+      "metadata": {
+        "id": "1AVREeDOx3uE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.agg( {'Sales':'sum'} ).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YbNysWSqwU7H",
+        "outputId": "dc4c6dc6-ddff-4ec9-c032-0f9de05c9e95"
+      },
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+\n",
+            "|sum(Sales)|\n",
+            "+----------+\n",
+            "|    4327.0|\n",
+            "+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.agg( {'Sales':'max'} ).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cBdGQuvEwc0-",
+        "outputId": "cbfadfde-5a8b-48cb-b0c6-9c4c8471a29b"
+      },
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+\n",
+            "|max(Sales)|\n",
+            "+----------+\n",
+            "|     870.0|\n",
+            "+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "group_data = df.groupBy(\"Company\")"
+      ],
+      "metadata": {
+        "id": "o0nJfsEMwejh"
+      },
+      "execution_count": 120,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "group_data.agg( {'Sales':'max'} ).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gELly3_0wl85",
+        "outputId": "f0075cd2-4522-4af5-fc8f-f9c404e58a7a"
+      },
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+----------+\n",
+            "|Company|max(Sales)|\n",
+            "+-------+----------+\n",
+            "|   APPL|     750.0|\n",
+            "|   GOOG|     340.0|\n",
+            "|     FB|     870.0|\n",
+            "|   MSFT|     600.0|\n",
+            "+-------+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# countDistinct,avg,stddev"
+      ],
+      "metadata": {
+        "id": "va1anfQZx86t"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql.functions import countDistinct,avg,stddev"
+      ],
+      "metadata": {
+        "id": "gG347UJ4wuY_"
+      },
+      "execution_count": 129,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.select(countDistinct('Sales')).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "APQ2BW59xBMm",
+        "outputId": "2195c3e7-dd15-46f5-c37d-169db6769077"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------------------+\n",
+            "|count(DISTINCT Sales)|\n",
+            "+---------------------+\n",
+            "|                   11|\n",
+            "+---------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.select(avg('Sales').alias('Average Sales')).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HErNa6SqxJ7K",
+        "outputId": "eef3ee78-c357-4ee8-c434-b99074dfffdc"
+      },
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------------+\n",
+            "|    Average Sales|\n",
+            "+-----------------+\n",
+            "|360.5833333333333|\n",
+            "+-----------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.select(stddev('Sales')).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CtsUFSNlxebm",
+        "outputId": "ee630d20-3ff9-4cd0-ca1d-badac8c0f49f"
+      },
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+------------------+\n",
+            "|stddev_samp(Sales)|\n",
+            "+------------------+\n",
+            "|250.08742410799007|\n",
+            "+------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# format_number"
+      ],
+      "metadata": {
+        "id": "Bag5vr_qyEzn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql.functions import format_number"
+      ],
+      "metadata": {
+        "id": "ViOYvCTwxo9n"
+      },
+      "execution_count": 128,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sales_std = df.select(stddev('Sales').alias('std'))"
+      ],
+      "metadata": {
+        "id": "kiunEC-hxrJ3"
+      },
+      "execution_count": 133,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sales_std.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PJCbbeo8xrbn",
+        "outputId": "4af89058-aeb3-49ed-cdc1-5da1c504de3d"
+      },
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+------------------+\n",
+            "|               std|\n",
+            "+------------------+\n",
+            "|250.08742410799007|\n",
+            "+------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sales_std.select(format_number('std',2).alias('std')).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7-xNF61Qyc_b",
+        "outputId": "83a0b8d6-8cd3-405e-e50e-1ad3a61cfe10"
+      },
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+------+\n",
+            "|   std|\n",
+            "+------+\n",
+            "|250.09|\n",
+            "+------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# orderBy"
+      ],
+      "metadata": {
+        "id": "DM8WWxRWy6eE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.orderBy('Sales').show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KqqlQes7yxHc",
+        "outputId": "6b560bb8-24f8-4d2d-d5c6-15c00076d736"
+      },
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+-------+-----+\n",
+            "|Company| Person|Sales|\n",
+            "+-------+-------+-----+\n",
+            "|   GOOG|Charlie|120.0|\n",
+            "|   MSFT|    Amy|124.0|\n",
+            "|   APPL|  Linda|130.0|\n",
+            "|   GOOG|    Sam|200.0|\n",
+            "|   MSFT|Vanessa|243.0|\n",
+            "|   APPL|   John|250.0|\n",
+            "|   GOOG|  Frank|340.0|\n",
+            "|     FB|  Sarah|350.0|\n",
+            "|   APPL|  Chris|350.0|\n",
+            "|   MSFT|   Tina|600.0|\n",
+            "|   APPL|   Mike|750.0|\n",
+            "|     FB|   Carl|870.0|\n",
+            "+-------+-------+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.orderBy(df['Sales'].desc()).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4K6DUESfzApt",
+        "outputId": "9b9e433b-54c3-4c83-e6e7-b174899727de"
+      },
+      "execution_count": 141,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+-------+-----+\n",
+            "|Company| Person|Sales|\n",
+            "+-------+-------+-----+\n",
+            "|     FB|   Carl|870.0|\n",
+            "|   APPL|   Mike|750.0|\n",
+            "|   MSFT|   Tina|600.0|\n",
+            "|     FB|  Sarah|350.0|\n",
+            "|   APPL|  Chris|350.0|\n",
+            "|   GOOG|  Frank|340.0|\n",
+            "|   APPL|   John|250.0|\n",
+            "|   MSFT|Vanessa|243.0|\n",
+            "|   GOOG|    Sam|200.0|\n",
+            "|   APPL|  Linda|130.0|\n",
+            "|   MSFT|    Amy|124.0|\n",
+            "|   GOOG|Charlie|120.0|\n",
+            "+-------+-------+-----+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
