Spark DataFrame Missing Data

--- a/my_spark.ipynb
+++ b/my_spark.ipynb
@@ -18,7 +18,7 @@
         "va1anfQZx86t",
         "Bag5vr_qyEzn"
       ],
-      "authorship_tag": "ABX9TyPIwV91mwvHy3JvZZ6YoAze",
+      "authorship_tag": "ABX9TyOCfWj3mV/QoZjzm1Q/YaKk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2266,7 +2266,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Missing Data**"
+        "# **Spark DataFrame Missing Data**"
       ],
       "metadata": {
         "id": "M75itbY7kYY_"
@@ -2275,35 +2275,474 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "from pyspark.sql import SparkSession"
       ],
       "metadata": {
         "id": "ws8dxniJka2Y"
       },
-      "execution_count": null,
+      "execution_count": 145,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "spark = SparkSession.builder.appName('miss').getOrCreate()"
       ],
       "metadata": {
         "id": "f9djpvBlka42"
       },
-      "execution_count": null,
+      "execution_count": 149,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "df = spark.read.csv('ContainsNull.csv' ,inferSchema=True, header=True)"
       ],
       "metadata": {
         "id": "xrCXUwpKkbSa"
       },
-      "execution_count": null,
+      "execution_count": 150,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "af21im1P3mMx",
+        "outputId": "32aede12-a2a1-4396-d022-6cdcbc92b22a"
+      },
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----+-----+\n",
+            "|  Id| Name|Sales|\n",
+            "+----+-----+-----+\n",
+            "|emp1| John| null|\n",
+            "|emp2| null| null|\n",
+            "|emp3| null|345.0|\n",
+            "|emp4|Cindy|456.0|\n",
+            "+----+-----+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# drop"
+      ],
+      "metadata": {
+        "id": "rHNyQc-94v6J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.na.drop().show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hCP4JyVa3yrR",
+        "outputId": "cb202238-7a59-4e11-e302-76adce7955cd"
+      },
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----+-----+\n",
+            "|  Id| Name|Sales|\n",
+            "+----+-----+-----+\n",
+            "|emp4|Cindy|456.0|\n",
+            "+----+-----+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.na.drop(thresh=2).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ym8i3M9O4D19",
+        "outputId": "850f8bd5-04bb-45dd-eef3-9acfabcd7494"
+      },
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----+-----+\n",
+            "|  Id| Name|Sales|\n",
+            "+----+-----+-----+\n",
+            "|emp1| John| null|\n",
+            "|emp3| null|345.0|\n",
+            "|emp4|Cindy|456.0|\n",
+            "+----+-----+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.na.drop(how='any').show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-w59ednk4RmD",
+        "outputId": "b4520ab3-0e63-4fd1-d859-870b86f40cb4"
+      },
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----+-----+\n",
+            "|  Id| Name|Sales|\n",
+            "+----+-----+-----+\n",
+            "|emp4|Cindy|456.0|\n",
+            "+----+-----+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.na.drop(how='all').show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MzKsFUsY4V63",
+        "outputId": "7254d00d-9b0d-4f27-cc94-ee7142caa080"
+      },
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----+-----+\n",
+            "|  Id| Name|Sales|\n",
+            "+----+-----+-----+\n",
+            "|emp1| John| null|\n",
+            "|emp2| null| null|\n",
+            "|emp3| null|345.0|\n",
+            "|emp4|Cindy|456.0|\n",
+            "+----+-----+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.na.drop(subset=['Sales']).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ASNeWCmc4bFp",
+        "outputId": "188a5b69-d999-4d78-f664-440e09e44219"
+      },
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----+-----+\n",
+            "|  Id| Name|Sales|\n",
+            "+----+-----+-----+\n",
+            "|emp3| null|345.0|\n",
+            "|emp4|Cindy|456.0|\n",
+            "+----+-----+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# fill"
+      ],
+      "metadata": {
+        "id": "twxYSIVb4yL7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.printSchema()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BaCPDIU04n-G",
+        "outputId": "68570427-079d-4fa7-9dc6-a478e9fa20f3"
+      },
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- Id: string (nullable = true)\n",
+            " |-- Name: string (nullable = true)\n",
+            " |-- Sales: double (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.na.fill('FILL VALUE').show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EBiGtvJb4-FY",
+        "outputId": "63ecab04-9827-4d46-fca1-85f8072a329e"
+      },
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+----------+-----+\n",
+            "|  Id|      Name|Sales|\n",
+            "+----+----------+-----+\n",
+            "|emp1|      John| null|\n",
+            "|emp2|FILL VALUE| null|\n",
+            "|emp3|FILL VALUE|345.0|\n",
+            "|emp4|     Cindy|456.0|\n",
+            "+----+----------+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.na.fill(0).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iWKFQZ_25E4P",
+        "outputId": "cb5e986e-f88b-4855-e094-bb23572b7e73"
+      },
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----+-----+\n",
+            "|  Id| Name|Sales|\n",
+            "+----+-----+-----+\n",
+            "|emp1| John|  0.0|\n",
+            "|emp2| null|  0.0|\n",
+            "|emp3| null|345.0|\n",
+            "|emp4|Cindy|456.0|\n",
+            "+----+-----+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.na.fill('No Name',subset=['Name']).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "egh_JLbJ5JzG",
+        "outputId": "9bf93803-9941-4b80-ec1d-bbcc05b674cd"
+      },
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-------+-----+\n",
+            "|  Id|   Name|Sales|\n",
+            "+----+-------+-----+\n",
+            "|emp1|   John| null|\n",
+            "|emp2|No Name| null|\n",
+            "|emp3|No Name|345.0|\n",
+            "|emp4|  Cindy|456.0|\n",
+            "+----+-------+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql.functions import mean"
+      ],
+      "metadata": {
+        "id": "tnhbiDsx5Wf7"
+      },
+      "execution_count": 161,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mean_val = df.select(mean(df['Sales'])).collect()"
+      ],
+      "metadata": {
+        "id": "Cu53awTr5iWs"
+      },
+      "execution_count": 162,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mean_val"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HByIyEE35yMX",
+        "outputId": "048e3305-e69e-49b7-8a6c-741ca2a05e71"
+      },
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(avg(Sales)=400.5)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 166
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mean_sales = mean_val[0][0]"
+      ],
+      "metadata": {
+        "id": "Pc-2G2wy5rjq"
+      },
+      "execution_count": 167,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.na.fill(mean_sales,['Sales']).show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IEgmEPgn55aE",
+        "outputId": "7310e390-131d-48bf-c375-e93df2f80f7b"
+      },
+      "execution_count": 168,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----+-----+\n",
+            "|  Id| Name|Sales|\n",
+            "+----+-----+-----+\n",
+            "|emp1| John|400.5|\n",
+            "|emp2| null|400.5|\n",
+            "|emp3| null|345.0|\n",
+            "|emp4|Cindy|456.0|\n",
+            "+----+-----+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.na.fill(\n",
+        "    df.select(mean(df['Sales'])).collect()[0][0],\n",
+        "    ['Sales']\n",
+        ").show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aMFXDe3Q6F3N",
+        "outputId": "f2ca123e-db88-4223-a73b-b1cbe17b3f58"
+      },
+      "execution_count": 169,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----+-----+\n",
+            "|  Id| Name|Sales|\n",
+            "+----+-----+-----+\n",
+            "|emp1| John|400.5|\n",
+            "|emp2| null|400.5|\n",
+            "|emp3| null|345.0|\n",
+            "|emp4|Cindy|456.0|\n",
+            "+----+-----+-----+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
